--- a/SpotifyTwitterBot/src/twitter4j.properties
+++ b/SpotifyTwitterBot/src/twitter4j.properties
@@ -1,8 +1,8 @@
 loggerFactory=twitter4j.StdOutLoggerFactory
 jsonStoreEnabled=true
 
-oauth.accessToken=1422784159076978692-EiQ67nHulE67AVHtIeFauOb0BpmDw2
-oauth.accessTokenSecret=vhWmLxtSoVvdytmWuMIBOguHY1MxadUcMCKjzaEz4VbGK
+oauth.accessToken= //enter access token here
+oauth.accessTokenSecret= //enter secret here
 
-oauth.consumerKey=XAuqSXLmDMGZrEnCrZuLCHAed
-oauth.consumerSecret=kLewv6W0hTJlNEzBjeyOAdxuu9TBcFvFcCqt4UVJqAgyZoof1F
+oauth.consumerKey= //also known as API key
+oauth.consumerSecret= //enter secret here
